--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,7 +4,7 @@ pipeline {
     stages {
         stage('Clone Repository') {
             steps {
-                git 'https://github.com/ashnageorge98/ansible-web-deploy.git'
+                git branch: 'main', url: 'https://github.com/ashnageorge98/ansible-web-deploy.git'
             }
         }
 
