--- a/deploy_nginx.yml
+++ b/deploy_nginx.yml
@@ -2,7 +2,7 @@
 - hosts: webservers
   become: true
   tasks:
-    - name: Install nginx
+    - name: Install NGINX
       apt:
         name: nginx
         state: present
